# cmake

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  main.c
chinese/: CMakeLists.txt  words.c  words.h
demo1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo1  install_manifest.txt  main.c
demo1/math/: CMakeLists.txt  Makefile  cmake_install.cmake  myMath.c  myMath.h
demo2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo.c  demo1
demo3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo.c  demo1  say.c  say.h  talk.c  talk.h
demo5/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo.c  demo1  install_manifest.txt
demo5/say/: CMakeLists.txt  Makefile  cmake_install.cmake  say.c  say.h
demo5/talk/: CMakeLists.txt  Makefile  cmake_install.cmake  talk.c  talk.h
demo6/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  config.h.in  demo.c  demo1
demo6/say/: CMakeLists.txt  Makefile  cmake_install.cmake  say.c  say.h
hello/: CMakeLists.txt
math/: CMakeLists.txt  Makefile  cmake_install.cmake  sqrt.c  sqrt.h
t1/: CMakeLists.txt
t3/lib/: hello.h
tm1/: CMakeLists.txt
tm2/: CMakeLists.txt
tm3/: CMakeLists.txt
tm3/lib/: CMakeLists.txt  hello.h
tm4/src/: CMakeLists.txt
tm4_test/src/: CMakeLists.txt  hello.txt  main.c  main.h
tml2/: main.c
