PROJECT (HELLO)
SET (SRC_LIST main.c)
MESSAGE(STATUS "this is BINARY dir" ${HELLO_BINARY_DIR})
MESSAGE(STATIS "this is SOURCE dir"${HELLO_SOURCE_DIR})

MESSAGE(STATUS "这是hello,world程序") 
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/tm2)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/tm2)
#ADD_EXECUTABLE(hello ${SRC_LIST})
ADD_SUBDIRECTORY(src bin)
