SET(SRC_LIST main.c)

#PROJECT(HELLO) 

SET(HELLO "hello,world")

SET(TEST ${HELLO}${SRC_LIST})

MESSAGE(STATUS "变量打印"${TEST})
MESSAGE(STATUS "CMAKE_BINARY_DIR的内容："${CMAKE_BINARY_DIR})
MESSAGE(STATUS "PROJECT_BINARY_DIR的内容："${PROJECT_BINARY_DIR})
MESSAGE(STATUS "projectname_binary_dir的内容："${HELLO_BINARY_DIR})
MESSAGE(STATUS "CMAKE_CURRENT_BINARY_DIR的内容："${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "CMAKE_CURRENT_SOURCE_DIR的内容："${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "CMAKE_SOURCE_DIR的内容："${CMAKE_SOURCE_DIR})
MESSAGE(STATUS "CMAKE_CURRENT_LIST_FILE的内容："${CMAKE_CURRENT_LIST_FILE})
MESSAGE(STATUS "CMAKE_CURRENT_LIST_LINE的内容："${CMAKE_CURRENT_LIST_LINE})
MESSAGE(STATUS "CMAKE_MODULE_PATH的内容："${CMAKE_MODULE_PATH})
MESSAGE(STATUS "EXECUTABLE_OUTPUT_PATH的内容："${EXECUTABLE_OUTPUT_PATH})
MESSAGE(STATUS "LIBRARY_OUTOUPT_PATH的内容："${LIBRARY_OUTPUT_PATH})
MESSAGE(STATUS "PROJECT_NAME的内容："${PROJECT_NAME})
MESSAGE(STATUS "HOME dir:"$ENV{HOME}})
MESSAGE(STATUS "pwd :"$ENV{PWD})

#FILE(WRITE "hello.txt" "hello,world")
#FILE(APPEND "hello.txt","i am from american")
#FILE(READ "hello.txt" FILE_CONTENT)
#FILE(MD5 ${CMAKE_CURRENT_SOURCE_DIR}/hello.txt HASH_CONTENTS)
#FILE(STRINGS hello.txt PARSED_STRINGS)
#FILE(GLOB files RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.txt")
#FILE(MAKE_DIRECTORY dir1 dir2)
#FILE(RENAME dir2 dir3)
FILE(REMOVE dir3)
FILE(REMOVE_RECURSE dir3)
FILE(RELATIVE_PATH relative_path ${PROJECT_SOURCE_DIR}${CMAKE_CURRENT_SOURCE_DIR}/hello.txt)
MESSAGE(STATUS "relative_path:"${relative_path})
MESSAGE(STATUS "files:${files}")

#MESSAGE(STATUS "\nstrings of hello.txt is :\n"${PARSED_STRINGS})
#MESSAGE(STATUS "文件的内容："${FILE_CONTENT})
#MESSAGE(STATUS "hash content of hello.txt is :\n"${HASH_CONTENTS})


ADD_EXECUTABLE(hello ${SRC_LIST})
